// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageExternal FormArrayContainerCode Buttons ButtonContainerResend shallow renders correctly and button works, with code verify phone 1`] = `
<ButtonResend
  currentForm="codePhoneVerifyForm"
  handleClick={[Function]}
  text="Resend SMS"
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Buttons ButtonContainerResend shallow renders correctly, with code verify email 1`] = `
<ButtonResend
  currentForm="codeEmailVerifyForm"
  handleClick={[Function]}
  text="Resend Email"
  width={300}
/>
`;
